ANTLR-tutorial/src/main/antlr/comp2023/grammar/Javamm.g4
grammar Javamm;

@header {
    package pt.up.fe.comp2023;
}

INTEGER : [0-9]+ ;
ID : [a-zA-Z_][a-zA-Z_0-9]* ;

WS : [ \t\n\r\f]+ -> skip ;

program
    : statement+ EOF
    ;

statement
    : expression ';' #ExprStmt
    | var=ID '=' expression ';' #Assignment
    ;

expression
    : '(' expression ')' #Parenthesis
    | expression lOp=('&&' | '<') expression #LogicOp
    | expression op=('*' | '/') expression #BinaryOp
    | expression op=('+' | '-') expression #BinaryOp
    | value=INTEGER #Integer
    | value=ID #Identifier
    ;
